--- a/index.html
+++ b/index.html
@@ -375,7 +375,12 @@
         <div class="container text-center">
             <p>All rights reserved. Designed By <a href="#">Ashutosh Tomar,Divyanshu Tripathi, Ishika Goyal</a></p>
         </div>
+        
+
+
     </section>
+<a href="https://www.google.com/maps/place/Galgotias+College+Of+Engineering+And+Technology/@28.4727824,77.5120374,66m/data=!3m1!1e3!4m12!1m6!3m5!1s0x390cea74fc2ae251:0x38ee4019c0c5f2c3!2sGalgotias+College+Of+Engineering+And+Technology!8m2!3d28.4728217!4d77.5119906!3m4!1s0x390cea74fc2ae251:0x38ee4019c0c5f2c3!8m2!3d28.4728217!4d77.5119906"  target="_blank"><img src="images\Screenshot 2021-11-24 095258.png" alt="Location"></a>
+    <
     <!-- footer Section Ends Here -->
 
 </body>
