food ordering website first view complete

--- a/index-edit.html
+++ b/index-edit.html
@@ -54,13 +54,13 @@
         </div>
     </section>
     <!-- fOOD sEARCH Section Ends Here -->
-
+  
     <!-- CAtegories Section Starts Here -->
     <section class="categories">
         <div class="container">
             <h2 class="text-center">Explore Foods</h2>
 
-            <a href="category-foods.html">
+            <a href="category-starters.html">
             <div class="box-3 float-container">
                 <img src="images/starters logo.jpg" alt="Pizza" class="img-responsive img-curve">
 
@@ -68,19 +68,19 @@
             </div>
             </a>
 
-            <a href="#">
+            <a href="category-best seller meals.html">
             <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+                <img src="images/Best seller meals.jpg" alt="Burger" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Best Seller Meals</h3>
             </div>
             </a>
 
-            <a href="#">
+            <a href="category-drinks.html">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="images/drinks.jpg" alt="Momo" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Momo</h3>
+                <h3 class="float-text text-white">Drinks and Beverages</h3>
             </div>
             </a>
 
