--- a/index-edit3.html
+++ b/index-edit3.html
@@ -62,7 +62,7 @@
 
             <a href="category-foods.html">
             <div class="box-3 float-container">
-                <img src="images/starters logo.jpg" alt="Pizza" class="img-responsive img-curve">
+                <img src="images/starters logo.jpg" alt="Starters" class="img-responsive img-curve">
 
                 <h3 class="float-text text-white">Starters</h3>
             </div>
@@ -70,18 +70,17 @@
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+                <img src="images/Best seller meals.jpg" alt="Best seller meals" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Best seller meals</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
-
-                <h3 class="float-text text-white">Momo</h3>
-            </div>
+                <img src="images/drinks.jpg" alt="Drinks" class="img-responsive img-curve">
+                <h3 class="float-text text-white">Drinks and Beverages</h3>
+            </div> 
             </a>
 
             <div class="clearfix"></div>
