--- a/food-edit.html
+++ b/food-edit.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="logo">
                 <a href="#" title="Logo">
-                    <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
+                    <img src="images/pinch of spice.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
 
@@ -32,7 +32,7 @@
                         <a href="foods.html">Foods</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
