--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <p>All trademarks are properties of their respective owners. 2008-2021 © Pinch of Spice™ Ltd.<br>All rights reserved.<br> Designed By <a href="#">Ashutosh Tomar, Divyanshu Tripathi, Ishika Goyal</a></p>
         </div>
     </section>
-    <!-- footer Section Ends Here -->
+    <!-- footer Section Ends git Here -->
 
 </body>
 
