--- a/order-chakna.html
+++ b/order-chakna.html
@@ -84,7 +84,8 @@
                     <div class="order-label">Address</div>
                     <textarea name="address" rows="10" placeholder="E.g. Street, City, Country" class="input-responsive" required></textarea>
 
-                    <input type="submit" name="submit" value="Confirm Order" class="btn btn-primary">
+                    <button id='btn-next' name ='next' type='button' class='btn btn-block btn-primary' onclick="confirmOrder()">Confirm Order</button>
+
                 </fieldset>
 
             </form>
