--- a/order-chakna.html
+++ b/order-chakna.html
@@ -125,4 +125,9 @@
     <!-- footer Section Ends Here -->
 
 </body>
+<script>
+    function confirmOrder() {
+  alert("Your's Order is Confirmed");
+}
+</script>
 </html>
