--- a/order-french fries.html
+++ b/order-french fries.html
@@ -84,7 +84,7 @@
                     <div class="order-label">Address</div>
                     <textarea name="address" rows="10" placeholder="E.g. Street, City, Country" class="input-responsive" required></textarea>
 
-                    <input type="submit" name="submit" value="Confirm Order" class="btn btn-primary">
+                    <button id='btn-next' name ='next' type='button' class='btn btn-block btn-primary' onclick="confirmOrder()">Confirm Order</button>
                 </fieldset>
 
             </form>
@@ -124,4 +124,9 @@
     <!-- footer Section Ends Here -->
 
 </body>
+<script>
+    function confirmOrder() {
+  alert("Your's Order is Confirmed");
+}
+</script>
 </html>
