--- a/order-chakna.html
+++ b/order-chakna.html
@@ -119,7 +119,7 @@
     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#">Ashutosh Tomar,Divyanshu Tripathi, Ishika Goyal</a></p>
+            <p>All trademarks are properties of their respective owners. 2008-2021 © Pinch of Spice™ Ltd.<br>All rights reserved.<br> Designed By <a href="#">Ashutosh Tomar, Divyanshu Tripathi, Ishika Goyal</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
