--- a/order-dal makhni.html
+++ b/order-dal makhni.html
@@ -83,7 +83,7 @@
 
                     <div class="order-label">Address</div>
                     <textarea name="address" rows="10" placeholder="E.g. Street, City, Country" class="input-responsive" required></textarea>
-                    
+
                     <button id='btn-next' name ='next' type='button' class='btn btn-block btn-primary' onclick="confirmOrder()">Confirm Order</button>
 
                     <!-- <input type="submit" name="submit" value="Confirm Order" class="btn btn-primary"> -->
@@ -117,13 +117,14 @@
     </section>
     <!-- social Section Ends Here -->
 
-    <!-- footer Section Starts Here -->
+     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#">Ashutosh Tomar,Divyanshu Tripathi, Ishika Goyal</a></p>
+            <p>All trademarks are properties of their respective owners. 2008-2021 © Pinch of Spice™ Ltd.<br>All rights reserved.<br> Designed By <a href="#">Ashutosh Tomar, Divyanshu Tripathi, Ishika Goyal</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
+
 
 </body>
 <script>
