--- a/order-corona beer.html
+++ b/order-corona beer.html
@@ -56,11 +56,11 @@
                     <legend>Selected Food</legend>
 
                     <div class="food-menu-img">
-                        <img src="images/chakna.jpg" alt="Paneer Tikka" class="img-responsive img-curve">
+                        <img src="images/corona beer.jpg" alt="Paneer Tikka" class="img-responsive img-curve">
                     </div>
     
                     <div class="food-menu-desc">
-                        <h3>Chakhna</h3>
+                        <h3>Corona Beer</h3>
                         <p class="food-price">Rs 250</p>
 
                         <div class="order-label">Quantity</div>
@@ -127,7 +127,7 @@
 </body>
 <script>
     function confirmOrder() {
-  alert("Your Order 'CHAKHNA' is Confirmed");
+  alert("Your Order 'Corona Beer' is Confirmed");
 }
 </script>
 </html>
