--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order-corona beer.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
         
