--- a/order-dal makhni.html
+++ b/order-dal makhni.html
@@ -129,7 +129,7 @@
 </body>
 <script>
     function confirmOrder() {
-  alert("Your's Order is Confirmed");
+  alert("Your Order is Confirmed");
 }
 </script>
 </html>
