--- a/Offers-edit.html
+++ b/Offers-edit.html
@@ -67,103 +67,105 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/amzaon pay.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Get flat INR 25/- cashback using Amazon Pay</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Applicable on Amazon Pay transactions above INR 99/-
                     </p>
                     <br>
-
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">&#9733;4.1</a>
+                    <a href="#" class="btn btn-warning">&#9734;3.7</a>
+                    <a href="#" class="btn btn-danger">	&#11088;2.9</a>
+                    <a href="#" class="btn btn-primary">COPY</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/axis-offer.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Smoky Burger</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Avail 4% Cashback</h4>
+                    <p class="food-price">Limited time offer.Hurry up!!!</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Pay using Axis Bank Ace Credit Cards to avail 4% cashback
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                     <button type="button" class="btn btn-success">Success</button>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Burger" class="img-responsive img-curve">
+                    <img src="images/flipkart.png" alt="Chicke Hawain Burger" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Nice Burger</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Get 4% Cashback</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Pay using Flipkart Axis Bank Credit Cards & get 4% cashback
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/yes bank.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Get 10X Reward Points</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Pay using YES Bank Consumer Credit Cards to avail 10X Reward Points on orders above INR 400/-
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/paytm.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Get 20% discount using Paytm Payments Bank Visa Card </h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Maximum discount up to ₹150 on orders above ₹450
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-momo.jpg" alt="Chicke Hawain Momo" class="img-responsive img-curve">
+                    <img src="images/slice credit card.png" alt="Chicke Hawain Momo" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Chicken Steam Momo</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Get 30% discount using slice Visa card</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Maximum discount up to ₹100 on orders above ₹249
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
