--- a/category-drinks.html
+++ b/category-drinks.html
@@ -60,74 +60,74 @@
     <!-- fOOD MEnu Section Starts Here -->
     <section class="food-menu">
         <div class="container">
-            <h2 class="text-center"><a href="#">Drinks and Beverages we serve!!!</a></h2>
+            <h2 class="text-center">Drinks & Beverages</h2>
 
-            <div class="food-menu-box">
-                <div class="food-menu-img">
-                    <img src="images/iced cocktails.jpg" alt="Chocktail" class="img-responsive img-curve">
-                </div>
+    <div class="food-menu-box">
+        <div class="food-menu-img">
+            <img src="images/iced cocktails.jpg" alt="Chocktail" class="img-responsive img-curve">
+        </div>
 
-                <div class="food-menu-desc">
-                    <h4>Iced Cocktails</h4>
-                    <p class="food-price">Rs 150</p>
-                    <p class="food-detail">
-                        Made with Crushed Ice,Frozen Fruit and natural flavours.
-                    </p>
-                    <br>
+        <div class="food-menu-desc">
+            <h4>Iced Cocktails</h4>
+            <p class="food-price">Rs 150</p>
+            <p class="food-detail">
+                Made with Crushed Ice,Frozen Fruit and natural flavours.
+            </p>
+            <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
-                </div>
-            </div>
-        
-            <div class="food-menu-box">
-                <div class="food-menu-img">
-                    <img src="images/orange cocktail.jpg" alt="Orange cocktail" class="img-responsive img-curve">
-                </div>
+            <a href="order-iced cocktail.html" class="btn btn-primary">Order Now</a>
+        </div>
+    </div>
 
-                <div class="food-menu-desc">
-                    <h4>Orange Cocktails</h4>
-                    <p class="food-price">Rs 180</p>
-                    <p class="food-detail">
-                        Made with Fresh oranges,dry fruits and natural flavours.
-                    </p>
-                    <br>
+    <div class="food-menu-box">
+        <div class="food-menu-img">
+            <img src="images/orange cocktail.jpg" alt="Orange cocktail" class="img-responsive img-curve">
+        </div>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
-                </div>
-            </div>
-            <div class="food-menu-box">
-                <div class="food-menu-img">
-                    <img src="images/healthy-drink-fresh-carrot.jpg" alt="Carrot juice" class="img-responsive img-curve">
-                </div>
+        <div class="food-menu-desc">
+            <h4>Orange Cocktails</h4>
+            <p class="food-price">Rs 180</p>
+            <p class="food-detail">
+                Made with Fresh oranges,dry fruits and natural flavours.
+            </p>
+            <br>
 
-                <div class="food-menu-desc">
-                    <h4>Carrot Juice</h4>
-                    <p class="food-price">Rs 110</p>
-                    <p class="food-detail">
-                        Made with Fresh carrots,dry fruits and natural flavours.
-                    </p>
-                    <br>
+            <a href="order-orange cocktail.html" class="btn btn-primary">Order Now</a>
+        </div>
+    </div>
+    <div class="food-menu-box">
+        <div class="food-menu-img">
+            <img src="images/healthy-drink-fresh-carrot.jpg" alt="Carrot juice" class="img-responsive img-curve">
+        </div>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
-                </div>
-            </div>
+        <div class="food-menu-desc">
+            <h4>Carrot Juice</h4>
+            <p class="food-price">Rs 110</p>
+            <p class="food-detail">
+                Made with Fresh carrots,dry fruits and natural flavours.
+            </p>
+            <br>
 
-            <div class="food-menu-box">
-                <div class="food-menu-img">
-                    <img src="images/corona beer.jpg" alt="Corona beer" class="img-responsive img-curve">
-                </div>
+            <a href="order-carrot juice.html" class="btn btn-primary">Order Now</a>
+        </div>
+    </div>
 
-                <div class="food-menu-desc">
-                    <h4>Corona Beer</h4>
-                    <p class="food-price">Rs 250</p>
-                    <p class="food-detail">
-                        The next time you want to relax, disconnect and take a break, Corona is the perfect partner.
-                    </p>
-                    <br>
+    <div class="food-menu-box">
+        <div class="food-menu-img">
+            <img src="images/corona beer.jpg" alt="Corona beer" class="img-responsive img-curve">
+        </div>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
-                </div>
-            </div>
+        <div class="food-menu-desc">
+            <h4>Corona Beer</h4>
+            <p class="food-price">Rs 250</p>
+            <p class="food-detail">
+                The next time you want to relax, disconnect and take a break, Corona is the perfect partner.
+            </p>
+            <br>
+
+            <a href="order-corona beer.html" class="btn btn-primary">Order Now</a>
+        </div>
+    </div>
 
             <div class="clearfix"></div>
 
