--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
             <h1><p style="text-align:center">Contact</p></h1>
         </div>
 
-        <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-around; background-color: rgb(252, 251, 250); height: 400px;">
-            <div style="background-color: rgba(251, 134, 0, 0.363); " width= "500" height ="100 " >
+        <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-around; background-color: rgb(184, 184, 184); height: 400px;">
+            <div style="background-color: rgb(138, 138, 138); " width= "500" height ="100 " >
                 <p><p style="font-family:Courier; color:Blue; font-size: 30px;">  <strong>Address:</strong>
                     <br>23, 453, Wazirpura Rd,<br> Nagar Nigam Colony,Sanjay<br> Place, Civil Lines, Agra, Uttar<br> Pradesh 282002</p>
 
@@ -54,7 +54,7 @@
                    
                 </p>
             </div>
-            <div style="background-color: burlywood;">
+            <div style="background-color: rgb(138, 138, 138);">
                 <ul> <p class="text-center">
                     <a href="#">Social Links</a>
                 </p>
