--- a/order-iced cocktail.html
+++ b/order-iced cocktail.html
@@ -56,11 +56,11 @@
                     <legend>Selected Food</legend>
 
                     <div class="food-menu-img">
-                        <img src="images/dal makhani.jpg" alt="Paneer Tikka" class="img-responsive img-curve">
+                        <img src="images/iced cocktails.jpg" alt="Paneer Tikka" class="img-responsive img-curve">
                     </div>
     
                     <div class="food-menu-desc">
-                        <h3>Dal Makhani</h3>
+                        <h3>Iced Cocktail</h3>
                         <p class="food-price">Rs 150</p>
 
                         <div class="order-label">Quantity</div>
@@ -86,7 +86,6 @@
 
                     <button id='btn-next' name ='next' type='button' class='btn btn-block btn-primary' onclick="confirmOrder()">Confirm Order</button>
 
-                    <!-- <input type="submit" name="submit" value="Confirm Order" class="btn btn-primary"> -->
                 </fieldset>
 
             </form>
@@ -117,7 +116,7 @@
     </section>
     <!-- social Section Ends Here -->
 
-     <!-- footer Section Starts Here -->
+    <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
             <p>All trademarks are properties of their respective owners. 2008-2021 © Pinch of Spice™ Ltd.<br>All rights reserved.<br> Designed By <a href="#">Ashutosh Tomar, Divyanshu Tripathi, Ishika Goyal</a></p>
@@ -125,11 +124,10 @@
     </section>
     <!-- footer Section Ends Here -->
 
-
 </body>
 <script>
     function confirmOrder() {
-  alert("Your Order 'DAL MAKHNI' is Confirmed");
+  alert("Your Order 'ICED COCKTAIL' is Confirmed");
 }
 </script>
 </html>
