--- a/order.html
+++ b/order.html
@@ -127,7 +127,7 @@
 </body>
 <script>
     function confirmOrder() {
-  alert("Your's Order is Confirmed");
+  alert("Dear Customer, please select a Food Item before placing your order.");
 }
 </script>
 </html>
