--- a/Offers.html
+++ b/Offers.html
@@ -67,106 +67,107 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/paneer handi.jpg" alt="Paneer handi" class="img-responsive img-curve">
+                    <img src="images/amzaon pay.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Paneer Handi</h4>
-                    <p class="food-price">Rs 260</p>
+                    <h4>Get flat INR 25/- cashback using Amazon Pay</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Paneer, cashews, onions and tomatoes.
+                        Applicable on Amazon Pay transactions above INR 99/-
                     </p>
                     <br>
-
-                    <a href="order-paneer handi.html" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">&#9733;4.1</a>
+                    <a href="#" class="btn btn-warning">&#9734;3.7</a>
+                    <a href="#" class="btn btn-danger">	&#11088;2.9</a>
+                    <a href="#" class="btn btn-primary">COPY</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/shahi paneer.jpg" alt="Shahi paneer" class="img-responsive img-curve">
+                    <img src="images/axis-offer.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Shahi Paneer</h4>
-                    <p class="food-price">Rs 230</p>
+                    <h4>Avail 4% Cashback</h4>
+                    <p class="food-price">Limited time offer.Hurry up!!!</p>
                     <p class="food-detail">
-                        Made with Paneer, ginger, milk, garam masala.
+                        Pay using Axis Bank Ace Credit Cards to avail 4% cashback
                     </p>
                     <br>
 
-                    <a href="order-shahi paneer.html" class="btn btn-primary">Order Now</a>
+                     <button type="button" class="btn btn-success">Success</button>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/dal makhani.jpg" alt="Dal Makhni" class="img-responsive img-curve">
+                    <img src="images/flipkart.png" alt="Chicke Hawain Burger" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Dal Makhani</h4>
-                    <p class="food-price">Rs 150</p>
+                    <h4>Get 4% Cashback</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with whole urad dal, rajma, butter and spices.
+                        Pay using Flipkart Axis Bank Credit Cards & get 4% cashback
                     </p>
                     <br>
 
-                    <a href="order-dal makhni.html" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/mix vegetable.jpg" alt="Mix veg" class="img-responsive img-curve">
+                    <img src="images/yes bank.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Delicious Mix-Veg </h4>
-                    <p class="food-price">Rs 230</p>
+                    <h4>Get 10X Reward Points</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with Chopped Potatoes,Cauliflower,Carrots and more.
+                        Pay using YES Bank Consumer Credit Cards to avail 10X Reward Points on orders above INR 400/-
                     </p>
                     <br>
 
-                    <a href="order-mix veg.html" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/thali.jpg" alt="Thali" class="img-responsive img-curve">
+                    <img src="images/paytm.png" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Maharaja Thaali</h4>
-                    <p class="food-price">Rs 200</p>
+                    <h4>Get 20% discount using Paytm Payments Bank Visa Card </h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Conatins Mix veg, Dal, Shahi paneer and Gulab jamun.
+                        Maximum discount up to ₹150 on orders above ₹450
                     </p>
                     <br>
 
-                    <a href="order-maharaja thali.html" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/veg biryani.jpg" alt="Veg biryani" class="img-responsive img-curve">
+                    <img src="images/slice credit card.png" alt="Chicke Hawain Momo" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Hyderabadi Veg Biryani</h4>
-                    <p class="food-price">Rs 250</p>
+                    <h4>Get 30% discount using slice Visa card</h4>
+                    <p class="food-price"></p>
                     <p class="food-detail">
-                        Made with basmati rice,fried onions,carrots,fried onions and ghee.
+                        Maximum discount up to ₹100 on orders above ₹249
                     </p>
                     <br>
 
-                    <a href="order-veg biryani.html" class="btn btn-primary">Order Now</a>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
-
 
             <div class="clearfix"></div>
 
