--- a/order-maharaja thali.html
+++ b/order-maharaja thali.html
@@ -127,7 +127,7 @@
 </body>
 <script>
     function confirmOrder() {
-  alert("Your's Order is Confirmed");
+  alert("Your Order 'MAHARAJA THAALI' is Confirmed");
 }
 </script>
 </html>
