--- a/order-shahi paneer.html
+++ b/order-shahi paneer.html
@@ -126,7 +126,7 @@
 </body>
 <script>
     function confirmOrder() {
-  alert("Your's Order is Confirmed");
+  alert("Your Order 'SHAHI PANEER' is Confirmed");
 }
 </script>
 </html>
