--- a/category-best seller meals.html
+++ b/category-best seller meals.html
@@ -74,7 +74,7 @@
                         Made with Paneer, cashews, onions and tomatoes.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">&#11088;3.7</a>
                     <a href="order-paneer handi.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                         Made with Paneer, ginger, milk, garam masala.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.2</a>
                     <a href="order-shahi paneer.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                         Made with whole urad dal, rajma, butter and spices.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.1</a>
                     <a href="order-dal makhni.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                         Made with Chopped Potatoes,Cauliflower,Carrots and more.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.3</a>
                     <a href="order-mix veg.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                         Conatins Mix veg, Dal, Shahi paneer and Gulab jamun.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">&#11088;3.9</a>
                     <a href="order-maharaja thali.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                         Made with basmati rice,fried onions,carrots,fried onions and ghee.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-danger">&#11088;2.5</a>
                     <a href="order-veg biryani.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
