--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 Made with Potatoes,Vegetable Oil and Salt.
             </p>
             <br>
-
+            <a href="#" class="btn btn-success">&#11088;4.2</a>
             <a href="order-french fries.html" class="btn btn-primary">Order Now</a>
         </div>
     </div>
@@ -125,7 +125,7 @@
                 Made with soya chunks,soya beans and vegetables.
             </p>
             <br>
-
+            <a href="#" class="btn btn-warning">	&#11088;3.7</a>
             <a href="order-soya chap.html" class="btn btn-primary">Order Now</a>
         </div>
     </div>
@@ -141,7 +141,7 @@
                 Made with curdled milk and some sort of fruit or vegetable acid like lemon juice.
             </p>
             <br>
-
+            <a href="#" class="btn btn-danger">	&#11088;2.9</a>
             <a href="order-paneer tikka.html" class="btn btn-primary">Order Now</a>
         </div>
     </div>
@@ -158,7 +158,7 @@
                 Made with Barley, flour, spices and vegetables.
             </p>
             <br>
-
+            <a href="#" class="btn btn-success">	&#11088;4.9</a>
             <a href="order-chakna.html" class="btn btn-primary">Order Now</a>
         </div>
     </div>
@@ -180,7 +180,7 @@
                         Made with Paneer, cashews, onions and tomatoes.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">&#11088;3.7</a>
                     <a href="order-paneer handi.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                         Made with Paneer, ginger, milk, garam masala.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.2</a>
                     <a href="order-shahi paneer.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                         Made with whole urad dal, rajma, butter and spices.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.1</a>
                     <a href="order-dal makhni.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -231,7 +231,7 @@
                         Made with Chopped Potatoes,Cauliflower,Carrots and more.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.3</a>
                     <a href="order-mix veg.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                         Conatins Mix veg, Dal, Shahi paneer and Gulab jamun.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">&#11088;3.9</a>
                     <a href="order-maharaja thali.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                         Made with basmati rice,fried onions,carrots,fried onions and ghee.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-danger">&#11088;2.5</a>
                     <a href="order-veg biryani.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                         Made with Crushed Ice,Frozen Fruit and natural flavours.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">&#11088;4.4</a>
                     <a href="order-iced cocktail.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                         Made with Fresh oranges,dry fruits and natural flavours.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">	&#11088;3.6</a>
                     <a href="order-orange cocktail.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -318,7 +318,7 @@
                         Made with Fresh carrots,dry fruits and natural flavours.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">	&#11088;3.8</a>
                     <a href="order-carrot juice.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -335,7 +335,7 @@
                         The next time you want to relax, disconnect and take a break, Corona is the perfect partner.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">	&#11088;4.9</a>
                     <a href="order-corona beer.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -356,7 +356,7 @@
                         Made with milk solids, flour & a leavening agent.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">	&#11088;4.3</a>
                     <a href="order-gulab jamun.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -373,7 +373,7 @@
                         Made with Fresh cream, flour, sugar syrup and added flavours.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-danger">	&#11088;2.3</a>
                     <a href="order-pastries.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -389,7 +389,7 @@
                         Made with Fresh cream, flour, sugar syrup and added flavours.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-success">	&#11088;4.5</a>
                     <a href="order-Straw-berry Cake.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
@@ -406,7 +406,7 @@
                         Made with cashew nuts, sugar and cardamom powder.
                     </p>
                     <br>
-
+                    <a href="#" class="btn btn-warning">	&#11088;3.6</a>
                     <a href="order-Kaju Katli.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
