--- a/Offers.html
+++ b/Offers.html
@@ -77,10 +77,8 @@
                         Applicable on Amazon Pay transactions above INR 99/-
                     </p>
                     <br>
-                    <a href="#" class="btn btn-success">&#9733;4.1</a>
-                    <a href="#" class="btn btn-warning">&#9734;3.7</a>
-                    <a href="#" class="btn btn-danger">	&#11088;2.9</a>
-                    <a href="#" class="btn btn-primary">COPY</a>
+                  
+                    <a href="#" class="btn btn-success">COPY CODE</a>
                 </div>
             </div>
 
@@ -96,8 +94,8 @@
                         Pay using Axis Bank Ace Credit Cards to avail 4% cashback
                     </p>
                     <br>
-
-                     <button type="button" class="btn btn-success">Success</button>
+                    <a href="#" class="btn btn-success">COPY CODE</a>
+                    
                 </div>
             </div>
 
