--- a/index-edit3.html
+++ b/index-edit3.html
@@ -443,7 +443,7 @@
     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#">Ashutosh Tomar, Divyanshu Tripathi, Ishika Goyal</a></p>
+            <p>All rights reserved. Designed By <a href="#">Ashutosh Tomar, Divyanshu Tripathi</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
